cargo-features = ["profile-rustflags"]

[package]
name = "mite-rs"
version = "0.1.0"
authors = ["csjh"]
description = "mite-rs"
license = "MIT"
repository = "https://github.com/csjh/mite-rs"
edition = "2021"

[profile.dev]
debug = false
opt-level = 1

[profile.release]
debug = false
opt-level = 'z'
lto = true

[build-dependencies]
bindgen = "0.69.4"

[features]
bindings = []
